fix button alignment on small screens

--- a/website/frontend/src/styles/index.css
+++ b/website/frontend/src/styles/index.css
@@ -130,13 +130,13 @@ textarea:focus {
   margin: 30px 0px;
 }
 
-@media (max-width: 992px) {
+@media (max-width: 1051px) {
   .center-box {
     width: 75vw;
   }
 }
 
-@media (max-width: 576px) {
+@media (max-width: 700px) {
   .center-box {
     width: 95vw;
   }
